--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
+/* @assert { type: 'css' }; */
+
 #content {
     background-color: rgb(25, 25, 65);
     color: white;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 90vh;
 }
 
 .mobileMenu {
@@ -10,7 +12,7 @@
     text-align: center;
 }
 
-.menuItem, .lastMenuItem {
+.menuItem, .lastMenuItem, .moreMenu {
     padding-top: 16px;
     text-decoration: none;
     border: 3px solid black;
