Make moreMenu dynamically shown/hidden when it is populated/depopulated with menuItems

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
     text-align: center;
 }
 
-.menuItem, .lastMenuItem, .moreMenu {
+.menuItem, .lastMenuItem, .moreMenu, .moreMenuItem {
     padding-top: 16px;
     text-decoration: none;
     border: 3px solid black;
